maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:56: error: '=' expected but ';' found.
  var bagglePos = foundBaggle()
^